# GPU

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DDR3-implementation-diversions.md  README.md  TIMING_TEST_RETROFIT_PLAN.md  UNTESTED.md  resume_state.txt
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: consolidation-reviewer.md  implement.md  test-author.md  validate.md
.claude/scripts/: log_tool_timing.py  summarize_tool_timing.py
.claude/skills/multi-agent-workflow/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
build_fixed/: CTestTestfile.cmake  Makefile  compile_commands.json
build_fixed/runner/: CTestTestfile.cmake  Makefile  gpu_sim
build_fixed/sim/: CTestTestfile.cmake  Makefile
build_fixed/sim/tests/: CTestTestfile.cmake  Makefile  test_alu  test_branch  test_cache  test_cache_mshr_merging  test_coalescing  test_config  test_decoder  test_functional  test_instruction_latency  test_integration  test_load_gather_buffer  test_panic  test_reg  test_scoreboard  test_timing_components  test_warp_scheduler
build_fixed/tests/embedding_gather/: CTestTestfile.cmake  Makefile  embedding_gather_bench  embedding_gather_kernel.elf
build_fixed/tests/fused_linear_activation/: CTestTestfile.cmake  Makefile  fused_linear_activation_bench  fused_linear_activation_kernel.elf
build_fixed/tests/gemv/: CTestTestfile.cmake  Makefile  gemv_bench  gemv_kernel.elf
build_fixed/tests/layernorm_lite/: CTestTestfile.cmake  Makefile  (+2 more)
project-plans/: eager-wobbling-pizza.md  goofy-humming-dream.md  i-want-to-bring-groovy-spring.md  i-want-to-build-greedy-noodle.md  lively-conjuring-neumann.md  memory-system-deviation-log.md  naming-and-access-discipline.md  peaceful-noodling-stallman.md  phase-10-memory-discipline.md  phase-10-pipeline-discipline.md  reg-fidelity-audit.md  registered-mshr-write-buffer.md  registered-tag-array.md  shiny-meandering-pine.md  snazzy-sprouting-charm.md  sparkling-dazzling-starfish.md  spec-vs-sim-audit.md  structured-foraging-scroll.md  timing-bug-hunt-findings.md  timing-bug-hunt-progress.md  unified-findings.md  valiant-popping-ember.md
resources/: RISCV_CARD.md  cpp_coding_standard.md  gpu_architectural_spec.md  memory_system_diagram.md  onboarding.md  perf_alignment_audit_matrix.md  perf_alignment_validation.md  perf_reference_methodology.md  perf_sim_arch.md  perfetto_trace_queries.sql  refactor_workflow.md  timing_discipline.md  trace_and_perf_counters.md
runner/: CMakeLists.txt
runner/include/runner/: backend.h
runner/include/runner/backends/: perf_sim_backend.h
runner/src/: backend.cpp  main.cpp
runner/src/backends/: perf_sim_backend.cpp
sim/: CMakeLists.txt
sim/configs/dram/: DDR3_4Gb_x16_800.ini
sim/include/gpu_sim/: config.h  decoder.h  elf_loader.h  isa.h  stats.h  trace_event.h  types.h
sim/include/gpu_sim/backends/: perf_sim_backend.h
sim/include/gpu_sim/functional/: alu.h  functional_model.h  memory.h  register_file.h
sim/include/gpu_sim/timing/: alu_unit.h  branch_predictor.h  branch_shadow_tracker.h  cache.h  coalescing_unit.h  decode_stage.h  divide_unit.h  dramsim3_memory.h  execution_unit.h  fetch_stage.h  instruction_buffer.h  ldst_unit.h  load_gather_buffer.h  memory_interface.h  mshr.h  multiply_unit.h  operand_collector.h  panic_controller.h  pipeline_stage.h  reg.h  scoreboard.h  timing_model.h  timing_trace.h  tlookup_unit.h  warp_scheduler.h  warp_state.h  writeback_arbiter.h
sim/src/: backend.cpp  config.cpp  decoder.cpp  elf_loader.cpp  main.cpp  stats.cpp
sim/src/backends/: perf_sim_backend.cpp
sim/src/functional/: alu.cpp  functional_model.cpp
sim/src/timing/: alu_unit.cpp  branch_predictor.cpp  cache.cpp  coalescing_unit.cpp  decode_stage.cpp  divide_unit.cpp  dramsim3_memory.cpp  fetch_stage.cpp  ldst_unit.cpp  load_gather_buffer.cpp  memory_interface.cpp  mshr.cpp  multiply_unit.cpp  operand_collector.cpp  panic_controller.cpp  timing_model.cpp  timing_trace.cpp  tlookup_unit.cpp  warp_scheduler.cpp  writeback_arbiter.cpp
sim/tests/: CMakeLists.txt  test_alignment.cpp  test_alu.cpp  test_branch.cpp  test_cache.cpp  test_cache_mshr_merging.cpp  test_coalescing.cpp  test_config.cpp  test_decoder.cpp  test_dramsim3_memory.cpp  test_functional.cpp  test_instruction_latency.cpp  test_integration.cpp  test_load_gather_buffer.cpp  test_panic.cpp  test_reg.cpp  test_scoreboard.cpp  test_timing_components.cpp  test_warp_scheduler.cpp
spreadsheet/: GPU.xlsx  ~$GPU.xlsx
tests/: run_workload_benchmarks.sh  test_signal_diagram.py
tests/embedding_gather/: CMakeLists.txt  embedding_gather_bench.cpp  embedding_gather_kernel.S
tests/fused_linear_activation/: CMakeLists.txt  fused_linear_activation_bench.cpp  fused_linear_activation_kernel.S
tests/gemv/: CMakeLists.txt  gemv_bench.cpp  gemv_kernel.S  link.ld
tests/layernorm_lite/: CMakeLists.txt  layernorm_lite_bench.cpp  layernorm_lite_kernel.S
tests/matmul/: CMakeLists.txt  matmul_bench.cpp  matmul_kernel.S
tests/references/: validate.sh
tests/riscv-isa/: Makefile  link.ld  run_tests.sh
tests/softmax_row/: CMakeLists.txt  softmax_row_bench.cpp  softmax_row_kernel.S
tests/synthetic/: CMakeLists.txt
tests/synthetic/divide_chain/: CMakeLists.txt  divide_chain_bench.cpp  divide_chain_kernel.S
tests/synthetic/jalr_storm/: CMakeLists.txt  jalr_storm_bench.cpp  jalr_storm_kernel.S
tests/synthetic/line_boundary_load/: CMakeLists.txt  line_boundary_load_bench.cpp  line_boundary_load_kernel.S
tests/synthetic/mshr_same_line_race/: CMakeLists.txt  mshr_same_line_race_bench.cpp  mshr_same_line_race_kernel.S
tests/synthetic/panic_drain_test/: CMakeLists.txt  panic_drain_test_bench.cpp  panic_drain_test_kernel.S
tests/synthetic/rr_tiebreak/: CMakeLists.txt  rr_tiebreak_bench.cpp  rr_tiebreak_kernel.S
tools/: bench_compare.py  diagram_extract_ast.py  diagram_extract_md.py  diagram_types.py  lint_timing_naming.py  matmul_shape_sweep.py  pipeline_order.py  render_signal_diagram.py  requirements.txt  roofline_matmul.py  signal_diagram.dot  signal_diagram.drawio  signal_diagram.mmd
(+102 files in other folders)
