add_library(catch_main OBJECT catch_main.cpp)
target_include_directories(catch_main PUBLIC vendor)

function(add_gpu_test TEST_NAME TEST_SRC)
    add_executable(${TEST_NAME} ${TEST_SRC})
    target_link_libraries(${TEST_NAME} PRIVATE gpu_sim_lib catch_main)
    target_include_directories(${TEST_NAME} PRIVATE vendor)
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endfunction()

add_gpu_test(test_decoder test_decoder.cpp)
add_gpu_test(test_alu test_alu.cpp)
add_gpu_test(test_functional test_functional.cpp)
add_gpu_test(test_scoreboard test_scoreboard.cpp)
add_gpu_test(test_cache test_cache.cpp)
add_gpu_test(test_coalescing test_coalescing.cpp)
add_gpu_test(test_warp_scheduler test_warp_scheduler.cpp)
add_gpu_test(test_branch test_branch.cpp)
add_gpu_test(test_panic test_panic.cpp)
add_gpu_test(test_integration test_integration.cpp)
add_gpu_test(test_timing_components test_timing_components.cpp)
add_gpu_test(test_load_gather_buffer test_load_gather_buffer.cpp)
add_gpu_test(test_cache_mshr_merging test_cache_mshr_merging.cpp)
