if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    cmake_minimum_required(VERSION 3.16)
    project(synthetic_bench VERSION 0.1.0 LANGUAGES CXX)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
    set(BUILD_TESTS OFF CACHE BOOL "Build simulator tests" FORCE)
    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../sim ${CMAKE_BINARY_DIR}/gpu_sim_build)
    enable_testing()
endif()

add_subdirectory(rr_tiebreak)
add_subdirectory(line_boundary_load)
add_subdirectory(mshr_same_line_race)
add_subdirectory(jalr_storm)
add_subdirectory(divide_chain)
add_subdirectory(panic_drain_test)
